# visualize-your-latent-atlas

./: README.md  README_Spaces.md  app.py  config.example.yaml  pyproject.toml  requirements.txt
docs/: REGISTRY.md
latent_atlas/: __init__.py  config.py
latent_atlas/core/: __init__.py  extract.py  visualize.py
latent_atlas/datasets/: __init__.py  loaders.py
latent_atlas/models/: __init__.py  vae_loader.py
latent_atlas/registry/: __init__.py
latent_atlas/web/: __init__.py  gradio_app.py
scripts/: demo_viz.py  extract_features.py  run_app.py  visualize.py
